--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.8",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "sweetalert": "^1.1.3"
   }
 }
